Add swagger docs for livy endpoints
